Dark Mode bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #181818;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
